feat: add Kubernetes deployment and CI pipeline